# study-genie

./: .gitignore  Dockerfile  PROJECT_PRESENTATION.md  README.md  Supabase Snippet Schema DDL Dumper.csv  a.md  a.txt  backend_api_functionality.md  chat.json  docker-compose.yml  llm_response.exampl  main.py  nun.sh  package-lock.json  project_functionality.md  pyproject.toml  requirements.txt  setup.md  student_activity_rows.csv  test_all_endpoints.py  test_file_upload.py
.github/: copilot-instructions.md
app/: __init__.py  config.py  core.py  database.py  file_manager.py  main.py  models.py  payload_handler.py  services.py  services_supabase.py  supabase_client.py  supabase_service.py
app/api/v1/: analytics.py  analytics_routes.py  api_key_routes.py  api_keys_supabase.py  auth.py  cache_routes.py  content_routes.py  export_routes.py  generation.py  llm.py  llm_routes.py  main.py  model_preferences.py  models.py  provider_routes.py  routers.py  routes.py  session_routes.py  student_routes.py  students.py  users_supabase.py
app/api/v1/students/: __init__.py  api_keys.py  crud.py  progress.py  recommendations.py
app/core/: __init__.py  auth_service.py  dependencies.py  encryption.py  llm_key_service.py  security.py
app/db/: db.py  db_client.py  init_database.py  models.py  supabase_init.py
app/llm/: __init__.py  chat.py  langchain.py  llm_orchestrator.py  old_langchain.py  orchestrator.py  provider.py  provider_service.py  providers.py  types.py
app/llm/process_files/: file_process.py  process_files.py
app/services/: __init__.py  activity_service.py  analytics_service.py  api_key_service.py  cache_service.py  core.py  db.py  learning_history_service.py  model_preference_service.py  student_service.py
app/services/students/: progress_saving.py
app/utils/: file_utils.py
configs/: __init__.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  test-upload.html
frontend/src/: App.jsx  index.css  main.jsx  main_old.jsx
frontend/src/components/: ChatBox.jsx  FileUpload.jsx  FlashCardDeck.jsx  Loading.jsx  LoginForm.jsx  MatchTheFollowing.jsx  Profile.jsx  ProgressDashboard.jsx  Quiz.jsx  StudyContentSections.jsx
frontend/src/services/: api.js
frontend/src/utils/: index.js
migrations/: 2025-08-23_study_sessions_bigint.sql
supabase/: config.toml
supabase/migrations/: 20250910170636_init_study_genie_schema.sql  20250912190459_init_study_genie_schema.sql  20250914123000_add_learning_sessions_simple.sql  20250915120000_add_chat_messages.sql  20250915180000_add_student_activity.sql
tests/: conftest.py  questions.txt  test_api.py
