[project]
name = "self-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi",
	"uvicorn[standard]",
	"pydantic",
	"redis",
	"sqlalchemy",
	"asyncpg",
	"langchain",
	"numpy",
	"httpx",
	"pytest-asyncio",
	"aiohttp",
	"aiofiles",
	"python-multipart",
	"rank_bm25",
	"pydantic",
	"langchain_community",
	"langchain_google_genai",
	"langchain[google-genai]",
	"pytest>=8.4.1",
	"python-dotenv>=1.0.0",
	"pypdf>=6.0.0",
	"faiss-cpu>=1.12.0",
	"google-generativeai>=0.8.5",
	"cryptography>=3.4.8",
	"python-jose>=3.5.0",
	"jwt>=1.4.0",
	"pyjwt>=2.10.1",
	"supabase>=2.7.4",
	"postgrest>=0.16.8",
	"storage3>=0.7.7",
	"gotrue>=2.8.2",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-asyncio",
	"pytest-cov",
	"black",
	"pre-commit",
]
