[project]
name = "self-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi",
	"uvicorn[standard]",
	"pydantic",
	"redis",
	"sqlalchemy",
	"asyncpg",
	"langchain",
	"numpy",
	"httpx",
	"pytest-asyncio",
	"aiohttp",
	"aiofiles",
	"python-multipart",
	"rank_bm25",
	"pydantic",
	"langchain_community",
	"langchain-google-genai",
	"langchain[google-genai]",
	"pytest>=8.4.1",
	"python-dotenv>=1.0.0",
	"pypdf>=6.0.0",
	"faiss-cpu>=1.12.0",
	"google-generativeai>=0.8.5",
	"cryptography>=3.4.8",
	"python-jose>=3.5.0",
	"jwt>=1.4.0",
	"pyjwt>=2.10.1",
	"supabase>=2.7.4",
	"postgrest>=0.16.8",
	"storage3>=0.7.7",
	"gotrue>=2.8.2",
	"pydantic-ai>=1.0.3",
	"unstructured>=0.18.14",
	"pillow>=11.3.0",
	"langchain-cohere>=0.4.6",
	"boto3>=1.40.28",
	"langchain-mistralai>=0.2.11",
	"langchain-huggingface>=0.3.1",
	"tenacity>=9.1.2",
	"pdfminer>=20191125",
	"pypdf2>=3.0.1",
	"docx>=0.2.4",
	"pytesseract>=0.3.13",
	"pdf2image>=1.17.0",
	"nbformat>=5.10.4",
	"whisper>=1.1.10",
	"pandas>=2.3.2",
	"email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-asyncio",
	"pytest-cov",
	"black",
	"pre-commit",
]
